--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Ejercicios_Workout/10_Ejercicios_Matrices.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Ejercicios_Workout/10_Ejercicios_Matrices.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,10 +94,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import math\n",
+    "\n",
+    "def distancia_2d(vec1, vec2, precision = 2): # Esperamos vectores de 2 dimensiones, es decir \"listas\" con longitud 2\n",
+    "    suma = 0\n",
+    "    for indice_componente in range(2): # 2 por ser la cardinalidad (número de componentes del vector)\n",
+    "        suma += (vec1[indice_componente] - vec2[indice_componente])**2\n",
+    "    distancia = math.sqrt(suma)\n",
+    "    distancia = round(distancia, precision)\n",
+    "    return distancia\n",
+    "\n",
+    "alumnos_ref = [\"Rodrigo\",\"Gabriela\",\"Mateo\"]\n",
+    "curso_asignado = [\"CAI\",\"ER\",\"NMPC\"]\n",
+    "diccionario_reparto = {}\n",
+    "\n",
+    "for alumno, vector in alumnos_aidone_modificado.items():\n",
+    "    # Recorremos el diccionario donde tenemos el vector que caracteriza cada alumno\n",
+    "    distancia_minima = 99999999 # Por ahora cualquier distancia a los alumons de referencia es buena\n",
+    "    indice_distancia_minima = -1\n",
+    "    diccionario_reparto[alumno] = []\n",
+    "    for indice_curso,alumno_ref in enumerate(alumnos_ref):\n",
+    "        vec_ref = alumnos_aidone_modificado[alumno_ref]\n",
+    "        distancia = distancia_2d(vector, vec_ref, 1)\n",
+    "        if distancia < distancia_minima:\n",
+    "            distancia_minima = distancia\n",
+    "            indice_distancia_minima = indice_curso\n",
+    "        diccionario_reparto[alumno].append(distancia)\n",
+    "\n",
+    "matriz_rtdo= []\n",
+    "\n",
+    "for alumno, distancias in diccionario_reparto.items():\n",
+    "    vec_asignacion= []\n",
+    "    maximo= max(distancias)\n",
+    "    minimo= min(distancias)\n",
+    "    maximo_asignado= False\n",
+    "    minimo_asignado= False\n",
+    "    for indice ,curso in enumerate(curso_asignado):\n",
+    "        distancia = distancias[indice ]\n",
+    "        if distancia == maximo and not maximo_asignado:\n",
+    "            vec_asignacion.append(0.5)\n",
+    "            maximo_asignado = True\n",
+    "        elif distancia== minimo and not minimo_asignado:\n",
+    "            vec_asignacion.append(4)\n",
+    "            minimo_asignado = True\n",
+    "        else:\n",
+    "            vec_asignacion.append(1.5)\n",
+    "    matriz_rtdo.append(vec_asignacion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[4, 1.5, 0.5],\n",
+       " [1.5, 4, 0.5],\n",
+       " [4, 1.5, 0.5],\n",
+       " [1.5, 0.5, 4],\n",
+       " [0.5, 4, 1.5],\n",
+       " [4, 1.5, 0.5],\n",
+       " [0.5, 1.5, 4],\n",
+       " [1.5, 4, 0.5],\n",
+       " [1.5, 0.5, 4],\n",
+       " [0.5, 1.5, 4],\n",
+       " [0.5, 4, 1.5],\n",
+       " [4, 0.5, 1.5]]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz_rtdo"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -131,10 +209,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def escalar_product(escalar,matriz):\n",
+    "    matriz_rtdo= []\n",
+    "    for vector_fila in matriz:\n",
+    "        nuevo_vector_fila= []\n",
+    "        for componente in vector_fila:\n",
+    "            producto= escalar * componente\n",
+    "            nuevo_vector_fila.append(producto)\n",
+    "        matriz_rtdo.append(nuevo_vector_fila)\n",
+    "\n",
+    "    return matriz_rtdo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[2.0, 0.75, 0.25],\n",
+       " [0.75, 2.0, 0.25],\n",
+       " [2.0, 0.75, 0.25],\n",
+       " [0.75, 0.25, 2.0],\n",
+       " [0.25, 2.0, 0.75],\n",
+       " [2.0, 0.75, 0.25],\n",
+       " [0.25, 0.75, 2.0],\n",
+       " [0.75, 2.0, 0.25],\n",
+       " [0.75, 0.25, 2.0],\n",
+       " [0.25, 0.75, 2.0],\n",
+       " [0.25, 2.0, 0.75],\n",
+       " [2.0, 0.25, 0.75]]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "escalar_product(0.5, matriz_rtdo)"
+   ]
   },
   {
    "attachments": {
@@ -159,10 +279,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4, 1.5, 0.5], [1.5, 4, 0.5], [4, 1.5, 0.5], [1.5, 0.5, 4], [0.5, 4, 1.5], [4, 1.5, 0.5], [0.5, 1.5, 4], [1.5, 4, 0.5], [1.5, 0.5, 4], [0.5, 1.5, 4], [0.5, 4, 1.5], [4, 0.5, 1.5]]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "can't multiply sequence by non-int of type 'float'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[31], line 37\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;28mprint\u001b[39m(matriz_rtdo)\n\u001b[1;32m     34\u001b[0m modificador \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mIngrese el modificador de horas \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m---> 37\u001b[0m nueva_matriz \u001b[38;5;241m=\u001b[39m \u001b[43mmodificar_matriz\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmatriz_rtdo\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodificador\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     39\u001b[0m \u001b[38;5;66;03m# Mostrar la matriz modificada\u001b[39;00m\n\u001b[1;32m     40\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mMatriz de asignación modificada:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[31], line 17\u001b[0m, in \u001b[0;36mmodificar_matriz\u001b[0;34m(matriz, modificador)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmodificar_matriz\u001b[39m(matriz, modificador):\n\u001b[0;32m---> 17\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mmatriz\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mmodificador\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'float'"
+     ]
+    }
+   ],
+   "source": [
+    "def escalar_product(escalar,matriz):\n",
+    "    matriz_rtdo= []\n",
+    "    for vector_fila in matriz:\n",
+    "        nuevo_vector_fila= []\n",
+    "        for componente in vector_fila:\n",
+    "            producto= escalar * componente\n",
+    "            nuevo_vector_fila.append(producto)\n",
+    "        matriz_rtdo.append(nuevo_vector_fila)\n",
+    "    \n",
+    "    return matriz_rtdo\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "def modificar_matriz(matriz, modificador):\n",
+    "    \n",
+    "    return matriz * modificador\n",
+    "matriz_asignacion = np.array ([[4, 1.5, 0.5],\n",
+    " [1.5, 4, 0.5],\n",
+    " [4, 1.5, 0.5],\n",
+    " [1.5, 0.5, 4],\n",
+    " [0.5, 4, 1.5],\n",
+    " [4, 1.5, 0.5],\n",
+    " [0.5, 1.5, 4],\n",
+    " [1.5, 4, 0.5],\n",
+    " [1.5, 0.5, 4],\n",
+    " [0.5, 1.5, 4],\n",
+    " [0.5, 4, 1.5],\n",
+    " [4, 0.5, 1.5]])\n",
+    "\n",
+    "print(matriz_rtdo)\n",
+    "   \n",
+    "\n",
+    "modificador = float(input(\"\\nIngrese el modificador de horas \"))\n",
+    "\n",
+    "\n",
+    "nueva_matriz = modificar_matriz(matriz_rtdo, modificador)\n",
+    "\n",
+    "# Mostrar la matriz modificada\n",
+    "print(\"\\nMatriz de asignación modificada:\")\n",
+    "print(nueva_matriz)\n"
+   ]
   },
   {
    "attachments": {
@@ -230,10 +412,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def dot_product(vec1, vec2):\n",
+    "    \"\"\"\n",
+    "    Función para calcular el producto punto entre dos vectores.\n",
+    "    \"\"\"\n",
+    "    return sum(v1 * v2 for v1, v2 in zip(vec1, vec2))\n",
+    "\n",
+    "def get_vec_col(matriz):\n",
+    "    \"\"\"\n",
+    "    Función que devuelve las columnas de una matriz representada por una lista de listas.\n",
+    "    \"\"\"\n",
+    "    return [list(columna) for columna in zip(*matriz)]\n",
+    "\n",
+    "def mut_mat(matriz_A, matriz_B):\n",
+    "    # Comprobar si las dimensiones de las matrices son compatibles\n",
+    "    if len(matriz_A[0]) != len(matriz_B):\n",
+    "        print(\"Error: no se pueden multiplicar\")\n",
+    "        return None\n",
+    "    \n",
+    "    # Multiplicación de matrices\n",
+    "    matriz_resultado = []\n",
+    "    for fila in matriz_A:\n",
+    "        fila_nueva = []\n",
+    "        for columna in get_vec_col(matriz_B):\n",
+    "            fila_nueva.append(dot_product(fila, columna))\n",
+    "        matriz_resultado.append(fila_nueva)\n",
+    "\n",
+    "    return matriz_resultado\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[4, 1.5, 0.5],\n",
+       " [1.5, 4, 0.5],\n",
+       " [4, 1.5, 0.5],\n",
+       " [1.5, 0.5, 4],\n",
+       " [0.5, 4, 1.5],\n",
+       " [4, 1.5, 0.5],\n",
+       " [0.5, 1.5, 4],\n",
+       " [1.5, 4, 0.5],\n",
+       " [1.5, 0.5, 4],\n",
+       " [0.5, 1.5, 4],\n",
+       " [0.5, 4, 1.5],\n",
+       " [4, 0.5, 1.5]]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz_rtdo\n"
+   ]
   },
   {
    "attachments": {
@@ -267,10 +508,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "matriz_A= [[9,5,8,5],\n",
+    "           [6,6,3,6],\n",
+    "           [0,8,1,9]]\n",
+    "matriz_B= [[4,2],\n",
+    "           [2,2],\n",
+    "           [4,2],\n",
+    "           [3,3]]\n",
+    "matriz_C= [[-2,1,0],\n",
+    "           [-1,3,3]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_vec_col(matriz):\n",
+    "    num_filas = len(matriz)\n",
+    "    num_columnas= len(matriz[0])\n",
+    "    lista_vec_columnas = []\n",
+    "    for j in range(num_columnas): # Recorremos las columnas\n",
+    "        new_vec = []\n",
+    "        for i in range(num_filas): # Recorremos las filas, el total de filas es el número de elementos de la lista matriz\n",
+    "            new_vec.append(matriz[i][j])\n",
+    "        lista_vec_columnas.append(new_vec)\n",
+    "    return lista_vec_columnas\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mut_mat(matriz_A,matriz_B):\n",
+    "    matriz_resultado= []\n",
+    "    for fila in matriz_A:\n",
+    "        fila_nueva= []\n",
+    "        for vec_columna in get_vec_col(matriz_B):\n",
+    "            nuevo_valor = dot_product(fila,vec_columna)\n",
+    "            fila_nueva.append(nuevo_valor)\n",
+    "        matriz_resultado.append(fila_nueva)\n",
+    "    return matriz_resultado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[93, 59], [66, 48], [47, 45]]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mut_mat(matriz_A,matriz_B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[-10, 10, 6], [-6, 8, 6], [-10, 10, 6], [-9, 12, 9]]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mut_mat(matriz_B,matriz_C)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -284,7 +610,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -298,7 +624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
