--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Algebra_Numpy.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Algebra_Numpy.ipynb
@@ -92,10 +92,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz de gastos por persona en cada tienda :\n",
+      "[[50.  49. ]\n",
+      " [58.5 61. ]\n",
+      " [43.5 43.5]]\n",
+      "Rafa debería comprar en Starbucks.\n",
+      "Nacho debería comprar en Manolo Bakes.\n",
+      "Clara debería comprar en Manolo Bakes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "cantidades = np.array([\n",
+    "    [6, 5, 3, 1],  # Rafa\n",
+    "    [3, 6, 2, 2],  # Nacho\n",
+    "    [3, 4, 3, 1]   # Clara\n",
+    "])\n",
+    "\n",
+    "\n",
+    "precios = np.array([\n",
+    "    [1.50, 1.00],  # Palmeras\n",
+    "    [2.00, 2.50],  # Donuts\n",
+    "    [5.00, 4.50],  # Hojaldres\n",
+    "    [16.00, 17.00] # Tartas\n",
+    "])\n",
+    "\n",
+    "\n",
+    "gastos = cantidades.dot(precios)\n",
+    "\n",
+    "\n",
+    "print(\"Matriz de gastos por persona en cada tienda :\")\n",
+    "print(gastos)\n",
+    "\n",
+    "\n",
+    "tienda_recomendada = np.argmin(gastos, axis=1)\n",
+    "\n",
+    "\n",
+    "personas = ['Rafa', 'Nacho', 'Clara']\n",
+    "tiendas = ['Manolo Bakes', 'Starbucks']\n",
+    "\n",
+    "for i in range(len(personas)):\n",
+    "    print(f\"{personas[i]} debería comprar en {tiendas[tienda_recomendada[i]]}.\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -146,10 +196,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Peliculas = {\n",
+    "    \"Toy Story\": [0,1,1,1,0],\n",
+    "    \"Jumanji\": [0,1,0,0,0],\n",
+    "    \"Mortal Kombat\": [1,1,0,0,0],\n",
+    "    \"Pocahontas\": [0,0,1,0,1]\n",
+    "}\n",
+    "#Le he dado 1 o 0 dependiendo si pertenecen a los distintos generos en el siguiente orden: Accion, aventura, animacion, comedia, romance\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,10 +220,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dimensión matriz: 2\n",
+      "Shape matriz (4, 5)\n",
+      "Tamaño matriz: 20\n",
+      "Tipo del array: <class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "Matriz_peliculas_np= np.array ([[0,1,1,1,0],\n",
+    "                                [0,1,0,0,0],\n",
+    "                                [1,1,0,0,0],\n",
+    "                                [0,0,1,0,1]]\n",
+    "                               )\n",
+    "\n",
+    "print(\"Dimensión matriz:\", Matriz_peliculas_np.ndim)\n",
+    "\n",
+    "\n",
+    "print(\"Shape matriz\", Matriz_peliculas_np.shape)\n",
+    "\n",
+    "\n",
+    "print(\"Tamaño matriz:\", Matriz_peliculas_np.size)\n",
+    "\n",
+    "\n",
+    "print(\"Tipo del array:\", type(Matriz_peliculas_np))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -177,10 +264,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5773502691896258\n",
+      "0.40824829046386296\n",
+      "0.40824829046386296\n",
+      "0.7071067811865475\n",
+      "0.0\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "Toy_Story= np.array ([0,1,1,1,0])\n",
+    "Jumanji= np.array([0,1,0,0,0])\n",
+    "Mortal_Kombat= np.array ([1,1,0,0,0])\n",
+    "Pocahontas= np.array([0,0,1,0,1])\n",
+    "\n",
+    "dot_product_1_2= np.dot (Toy_Story, Jumanji)\n",
+    "dot_product_1_3= np.dot (Toy_Story,Mortal_Kombat)\n",
+    "dot_product_1_4= np.dot(Toy_Story,Pocahontas)\n",
+    "dot_product_2_3= np.dot(Jumanji,Mortal_Kombat)\n",
+    "dot_product_2_4= np.dot(Jumanji,Pocahontas)\n",
+    "dot_product_3_4= np.dot(Mortal_Kombat,Pocahontas)\n",
+    "\n",
+    "\n",
+    "\n",
+    "dot_product_1_2= Toy_Story.dot(Jumanji)\n",
+    "dot_product_1_3= Toy_Story.dot(Mortal_Kombat)\n",
+    "dot_product_1_4= Toy_Story.dot(Pocahontas)\n",
+    "dot_product_2_3= Jumanji.dot(Mortal_Kombat)\n",
+    "dot_product_2_4= Jumanji.dot(Pocahontas)\n",
+    "dot_product_3_4= Mortal_Kombat.dot(Pocahontas)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Norma o longitud o magnitud\n",
+    "norm_1= np.linalg.norm(Toy_Story)\n",
+    "norm_2= np.linalg.norm(Jumanji)\n",
+    "norm_3= np.linalg.norm(Mortal_Kombat)\n",
+    "norm_4=np.linalg.norm(Pocahontas)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Coseno del ángulo\n",
+    "cos_ang_1_2= dot_product_1_2/(norm_1 * norm_2)\n",
+    "cos_ang_1_3=dot_product_1_3/(norm_1 * norm_3)\n",
+    "cos_ang_1_4= dot_product_1_4/(norm_1 * norm_4)\n",
+    "cos_ang_2_3= dot_product_2_3/(norm_2 * norm_3)\n",
+    "cos_ang_2_4= dot_product_2_4/(norm_2 * norm_4)\n",
+    "cos_ang_3_4= dot_product_3_4/(norm_3 * norm_4)\n",
+    "\n",
+    "print(cos_ang_1_2)\n",
+    "print(cos_ang_1_3)\n",
+    "print(cos_ang_1_4)\n",
+    "print(cos_ang_2_3)\n",
+    "print(cos_ang_2_4)\n",
+    "print(cos_ang_3_4)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -201,13 +349,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.4"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
