--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Ejercicios_Workout/10_Ejercicios_Array.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Ejercicios_Workout/10_Ejercicios_Array.ipynb
@@ -69,10 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "attachments": {
@@ -97,10 +99,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_array= np.array ([0,1,2,3,4,5,6,7,8,9])\n",
+    "print(my_array)"
+   ]
   },
   {
    "attachments": {
@@ -125,10 +138,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ True  True  True]\n",
+      " [ True  True  True]\n",
+      " [ True  True  True]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array_3x3_true = np.full((3, 3), True)\n",
+    "print(array_3x3_true)"
+   ]
   },
   {
    "attachments": {
@@ -153,10 +179,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 2 4 6 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_array [0:9:2])"
+   ]
   },
   {
    "attachments": {
@@ -181,10 +217,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0 -1  2 -1  4 -1  6 -1  8 -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_array[my_array % 2 != 0] = -1\n",
+    "nuevo_array = my_array\n",
+    "print(nuevo_array)"
+   ]
   },
   {
    "attachments": {
@@ -209,10 +257,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0 -1]\n",
+      " [ 2 -1]\n",
+      " [ 4 -1]\n",
+      " [ 6 -1]\n",
+      " [ 8 -1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_array_2d = my_array.reshape(5,2)\n",
+    "print(my_array_2d)"
+   ]
   },
   {
    "attachments": {
@@ -238,10 +301,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5]\n",
+      " [ 6  7  8  9 10]\n",
+      " [11 12 13 14 15]\n",
+      " [16 17 18 19 20]]\n",
+      "[[20 19 18 17 16]\n",
+      " [15 14 13 12 11]\n",
+      " [10  9  8  7  6]\n",
+      " [ 5  4  3  2  1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "matriz = np.arange(1, 21).reshape(4, 5)\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(matriz)\n",
+    "\n",
+    "\n",
+    "matriz_invertida = matriz[::-1, ::-1]\n",
+    "\n",
+    "\n",
+    "print(matriz_invertida)\n"
+   ]
   },
   {
    "attachments": {
@@ -271,10 +364,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [6 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array_resultado = matriz[:2, :2]\n",
+    "\n",
+    "print(array_resultado)"
+   ]
   },
   {
    "attachments": {
@@ -303,10 +409,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  3  5]\n",
+      " [ 6  8 10]\n",
+      " [11 13 15]\n",
+      " [16 18 20]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "array_resultado = matriz[:, ::2]\n",
+    "\n",
+    "print(array_resultado)\n"
+   ]
   },
   {
    "attachments": {
@@ -327,9 +449,9 @@
    "metadata": {},
    "source": [
     "Dado el siguiente array\n",
-    "\n",
-    "```Python\n",
     "x =np.random.randint(10, 20, size = (5,2,6))\n",
+    "```Python\n",
+    "\n",
     "```\n",
     "\n",
     "1. ¿Cuántos elementos tiene el array?\n",
@@ -340,10 +462,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total de elementos: 60\n",
+      "Número de dimensiones: 3\n",
+      "Elementos por dimensión (forma): (5, 2, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.random.randint(10, 20, size=(5, 2, 6))\n",
+    "\n",
+    "\n",
+    "total_elementos = x.size\n",
+    "num_dimensiones = x.ndim\n",
+    "forma_dimensiones = x.shape\n",
+    "\n",
+    "print(f\"Total de elementos: {total_elementos}\")\n",
+    "print(f\"Número de dimensiones: {num_dimensiones}\")\n",
+    "print(f\"Elementos por dimensión (forma): {forma_dimensiones}\")\n"
+   ]
   },
   {
    "attachments": {
@@ -373,11 +516,35 @@
     "\n",
     "Resuélvelo de dos maneras diferentes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Loro' 'Loro']\n",
+      "['Loro' 'Loro']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([\"Loro\", \"Perro\", \"Gato\", \"Loro\", \"Perro\"])\n",
+    "loro_filtrado = x[x == \"Loro\"]\n",
+    "print(loro_filtrado)\n",
+    "\n",
+    "indices_loros = np.where(x == \"Loro\")\n",
+    "loro_filtrado = x[indices_loros]\n",
+    "print(loro_filtrado)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -391,12 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "252189e587d1e2aeba4a06e91fa71896c7a7f6e22e918b9407c7cde4ef2d5985"
-   }
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
