--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Ejercicios_Workout/11_Ejercicios_Manipulaciones.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Ejercicios_Workout/11_Ejercicios_Manipulaciones.ipynb
@@ -73,10 +73,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2 3 4]\n",
+      " [5 6 7 8 9]]\n",
+      "[[1 1 1 1 1]\n",
+      " [1 1 1 1 1]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2, 3, 4],\n",
+       "       [5, 6, 7, 8, 9],\n",
+       "       [1, 1, 1, 1, 1],\n",
+       "       [1, 1, 1, 1, 1]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.arange(10).reshape(2,-1)\n",
+    "b = np.repeat(1, 10).reshape(2,-1)\n",
+    "print(a)\n",
+    "print(b)\n",
+    "np.vstack([a,b])"
+   ]
   },
   {
    "attachments": {
@@ -106,10 +137,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2, 3, 4, 1, 1, 1, 1, 1],\n",
+       "       [5, 6, 7, 8, 9, 1, 1, 1, 1, 1]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.arange(10).reshape(2,-1)\n",
+    "b = np.repeat(1, 10).reshape(2,-1)\n",
+    "np.hstack([a,b])"
+   ]
   },
   {
    "attachments": {
@@ -138,10 +185,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "[ 0 10 20 30 40 50 60 70 80 90]\n",
+      "0\n",
+      "9\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_array = np.arange(10)\n",
+    "print(my_array)\n",
+    "nuevo_array= my_array * 10\n",
+    "print(nuevo_array)\n",
+    "print(my_array[0])\n",
+    "print(my_array[-1])\n",
+    "for i in range(1,8):\n",
+    "    print(i)"
+   ]
   },
   {
    "attachments": {
@@ -169,10 +243,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 7, 10, 13, 16, 19, 22, 25, 28, 31, 34, 37, 40, 43, 46, 49]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Crear la secuencia que va de 1 a 49 con pasos de 3\n",
+    "secuencia = list(range(1, 50, 3))\n",
+    "\n",
+    "# Imprimir la secuencia\n",
+    "print(secuencia)\n"
+   ]
   },
   {
    "attachments": {
@@ -200,10 +288,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.   3.75 3.5  3.25 3.   2.75 2.5  2.25 2.   1.75 1.5  1.25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# Crear la secuencia que va de 4.0 a 1.25 con pasos de -0.25\n",
+    "secuencia_2 = np.arange(4.0, 1.0, -0.25)\n",
+    "\n",
+    "# Imprimir la secuencia\n",
+    "print(secuencia_2)\n"
+   ]
   },
   {
    "attachments": {
@@ -228,10 +332,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[2.66213219e-02 7.50750166e-01 4.24711899e-01]\n",
+      "  [2.46105376e-01 7.04125312e-01 3.77078714e-01]\n",
+      "  [8.92104071e-01 8.11937728e-01 2.46402397e-01]\n",
+      "  [9.81706767e-01 4.28324266e-01 3.92674762e-01]\n",
+      "  [4.41743248e-02 9.43648294e-02 5.75412131e-02]]\n",
+      "\n",
+      " [[8.30138686e-01 2.37720464e-01 8.10394832e-02]\n",
+      "  [5.35583258e-01 7.91067428e-01 6.04507690e-01]\n",
+      "  [6.48263215e-01 4.44052839e-01 5.22331458e-01]\n",
+      "  [2.68918033e-02 3.38494825e-01 8.27297186e-01]\n",
+      "  [7.84146374e-01 5.88840289e-01 2.57684120e-01]]\n",
+      "\n",
+      " [[2.39673914e-01 1.52511329e-01 1.55924656e-01]\n",
+      "  [5.88970728e-02 4.42813079e-01 3.07644127e-01]\n",
+      "  [6.47804709e-01 9.47081636e-01 7.01944910e-01]\n",
+      "  [5.13441778e-01 5.95173547e-01 9.23783871e-01]\n",
+      "  [2.45973920e-01 3.65573699e-01 3.93099186e-01]]\n",
+      "\n",
+      " [[8.03118361e-01 9.52176774e-02 3.54853152e-01]\n",
+      "  [3.09866408e-04 5.93504370e-01 1.23341622e-01]\n",
+      "  [2.32408951e-01 5.55344587e-01 9.44243610e-01]\n",
+      "  [4.14115989e-01 3.34843161e-01 8.44349007e-01]\n",
+      "  [5.43544407e-01 2.60208673e-01 3.83799064e-01]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "secuencia_3 = np.random.rand(4, 5, 3)\n",
+    "print(secuencia_3)"
+   ]
   },
   {
    "attachments": {
@@ -258,10 +395,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array original: [ 0  1  2  3  4  5  6  7  8  9 10]\n",
+      "Nuevo array (sustituir entre 3 y 8 por -1): [ 0  1  2 -1 -1 -1 -1 -1 -1  9 10]\n",
+      "Nuevo array (negar entre 3 y 8): [ True  True  True False False False False False False  True  True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "array = np.arange(11)\n",
+    "print(\"Array original:\", array)\n",
+    "\n",
+    "\n",
+    "nuevo_array_1 = np.where((array >= 3) & (array <= 8), -1, array)\n",
+    "print(\"Nuevo array (sustituir entre 3 y 8 por -1):\", nuevo_array_1)\n",
+    "\n",
+    "\n",
+    "nuevo_array_2 = np.where((array >= 3) & (array <= 8), False, True)\n",
+    "print(\"Nuevo array (negar entre 3 y 8):\", nuevo_array_2)\n"
+   ]
   },
   {
    "attachments": {
@@ -288,10 +447,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz original de 6x6:\n",
+      "[[ 1  2  3  4  5  6]\n",
+      " [ 7  8  9 10 11 12]\n",
+      " [13 14 15 16 17 18]\n",
+      " [19 20 21 22 23 24]\n",
+      " [25 26 27 28 29 30]\n",
+      " [31 32 33 34 35 36]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz = np.arange(1, 37).reshape(6, 6)\n",
+    "print(\"Matriz original de 6x6:\")\n",
+    "print(matriz)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[15 16]\n",
+      " [21 22]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nucleo_interior = matriz[2:4, 2:4]\n",
+    "print(nucleo_interior)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[30 32]\n",
+      " [42 44]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nucleo_interior_2= matriz[2:4, 2:4] * 2\n",
+    "print(nucleo_interior_2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5  6]\n",
+      " [ 7  8  9 10 11 12]\n",
+      " [13 14 30 32 17 18]\n",
+      " [19 20 42 44 23 24]\n",
+      " [25 26 27 28 29 30]\n",
+      " [31 32 33 34 35 36]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz = np.array([[elem*2 if 2 <= i < 4 and 2 <= j < 4 else elem\n",
+    "                    for j, elem in enumerate(row)] for i, row in enumerate(matriz)])\n",
+    "print(matriz)"
+   ]
   },
   {
    "attachments": {
@@ -316,10 +555,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 0  1]\n",
+      "  [ 2  3]\n",
+      "  [ 4  5]]\n",
+      "\n",
+      " [[ 6  7]\n",
+      "  [ 8  9]\n",
+      "  [10 11]]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 0, -1],\n",
+       "        [ 2, -1],\n",
+       "        [ 4, -1]],\n",
+       "\n",
+       "       [[ 6, -1],\n",
+       "        [ 8, -1],\n",
+       "        [10, -1]]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz_2 = np.arange(12).reshape(2,3,2)\n",
+    "print(matriz_2)\n",
+    "np.where(matriz_2 % 2 != 0,-1,matriz_2)"
+   ]
   },
   {
    "attachments": {
@@ -344,10 +617,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valores que no son 0: [1 2 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "vector = np.array([1, 2, 0, 0, 4, 0])\n",
+    "\n",
+    "\n",
+    "indices_no_cero = np.where(vector != 0)\n",
+    "\n",
+    "\n",
+    "valores_no_cero = vector[indices_no_cero]\n",
+    "\n",
+    "print(\"Valores que no son 0:\", valores_no_cero)\n"
+   ]
   },
   {
    "attachments": {
@@ -372,15 +666,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array con las palabras:\n",
+      "[['El' 'viento' 'sopló']\n",
+      " ['sobre' 'su' 'sombra']\n",
+      " ['maldita' 'y' 'traicionera']]\n",
+      "\n",
+      "Array con las longitudes de las palabras:\n",
+      "[[ 2  6  5]\n",
+      " [ 5  2  6]\n",
+      " [ 7  1 11]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "frase = \"El viento sopló sobre su sombra maldita y traicionera\"\n",
+    "palabras = frase.split()  \n",
+    "\n",
+    "\n",
+    "array_palabras = np.array(palabras).reshape(3, 3)\n",
+    "print(\"Array con las palabras:\")\n",
+    "print(array_palabras)\n",
+    "\n",
+    "longitudes = np.vectorize(len)(array_palabras)\n",
+    "\n",
+    "print(\"\\nArray con las longitudes de las palabras:\")\n",
+    "print(longitudes)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -394,12 +720,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "252189e587d1e2aeba4a06e91fa71896c7a7f6e22e918b9407c7cde4ef2d5985"
-   }
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
